--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
 <!--------------------------About---------------------------------->
     <div class="video-container"> 
         <br>
+        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fqtam32.github.io%2Fabout.html&width=450&layout=standard&action=like&size=small&share=true&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         <h2>Âm Nhạc Không Chỉ Để Nghe, Âm Nhạc Còn Là Music</h2>
         <br>
         <br>
